complement pom file

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,11 @@
         <module>spring-boot-apollo-example</module>
         <module>spring-boot-basic-example</module>
         <module>spring-boot-mongo-examples</module>
+        <module>spring-boot-mybatis-examples</module>
         <module>spring-boot-mysql-examples</module>
+        <module>spring-boot-prometheus-example</module>
+        <module>spring-cloud-examples</module>
+        <module>spring-cloud-huawei-examples</module>
     </modules>
 
     <parent>
