--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>spring-boot-mybatis-examples</module>
         <module>spring-boot-mysql-examples</module>
         <module>spring-boot-prometheus-example</module>
+        <module>spring-boot-sso-examples</module>
         <module>spring-cloud-examples</module>
         <module>spring-cloud-huawei-examples</module>
     </modules>
