--- a/spring-cloud-examples/pom.xml
+++ b/spring-cloud-examples/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
+        <module>spring-cloud-gateway-example</module>
         <module>spring-cloud-zookeeper-example</module>
     </modules>
 
