--- a/spring-boot-webflux-examples/pom.xml
+++ b/spring-boot-webflux-examples/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
+        <module>spring-boot-webflux-exception-example</module>
         <module>spring-boot-webflux-reactor-netty-example</module>
     </modules>
 
