--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,17 @@
         <module>spring-boot-basic-example</module>
         <module>spring-boot-email-example</module>
         <module>spring-boot-h2-example</module>
+        <module>spring-boot-jmx-example</module>
         <module>spring-boot-mongo-examples</module>
         <module>spring-boot-mybatis-examples</module>
         <module>spring-boot-mysql-examples</module>
         <module>spring-boot-prometheus-example</module>
+        <module>spring-boot-redis-example</module>
+        <module>spring-boot-security-example</module>
         <module>spring-boot-sso-examples</module>
         <module>spring-boot-webflux-examples</module>
         <module>spring-cloud-examples</module>
         <module>spring-cloud-huawei-examples</module>
-        <module>spring-boot-redis-example</module>
     </modules>
 
     <parent>
