--- a/spring-boot-jmx-example/pom.xml
+++ b/spring-boot-jmx-example/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-boot-examples</artifactId>
         <groupId>com.github.shoothzj</groupId>
+        <artifactId>spring-boot-examples</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-apollo-example</artifactId>
+    <artifactId>spring-boot-jmx-example</artifactId>
 
     <dependencies>
         <dependency>
