--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,13 @@
         <module>spring-boot-webflux-examples</module>
         <module>spring-cloud-examples</module>
         <module>spring-cloud-huawei-examples</module>
+        <module>spring-boot-postgre-examples</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>3.0.3</version>
+        <version>3.0.5</version>
     </parent>
 
     <groupId>com.github.shoothzj</groupId>
