add spring reactive h2 example

--- a/spring-cloud-examples/spring-cloud-zookeeper-example/src/main/resources/application.yaml
+++ b/spring-cloud-examples/spring-cloud-zookeeper-example/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 spring:
+  application:
+    name: backend
   cloud:
     zookeeper:
       connect-string: "localhost:2181"
-    discovery:
-      enabled: true
 
 logging:
   level:
-    org: info
+    org: debug
