--- a/spring-boot-postgre-examples/pom.xml
+++ b/spring-boot-postgre-examples/pom.xml
@@ -6,13 +6,14 @@
     <parent>
         <groupId>com.github.shoothzj</groupId>
         <artifactId>spring-boot-examples</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>spring-boot-postgre-examples</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>spring-boot-postgre-jpa-example</module>
+        <module>spring-boot-postgre-jpa-lob-example</module>
     </modules>
 
 </project>
