--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-boot-mongo-examples</module>
         <module>spring-boot-mybatis-examples</module>
         <module>spring-boot-mysql-examples</module>
+        <module>spring-boot-reactor-validation-examples</module>
         <module>spring-boot-postgre-examples</module>
         <module>spring-boot-prometheus-example</module>
         <module>spring-boot-reactor-h2-examples</module>
@@ -20,6 +21,7 @@
         <module>spring-boot-redis-example</module>
         <module>spring-boot-security-example</module>
         <module>spring-boot-sso-examples</module>
+        <module>spring-boot-validation-examples</module>
         <module>spring-boot-webflux-examples</module>
         <module>spring-cloud-examples</module>
         <module>spring-cloud-huawei-examples</module>
@@ -39,6 +41,10 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- dependency -->
+        <swagger-annotion.version>2.2.20</swagger-annotion.version>
+        <!-- plugin -->
+        <openapi-generator-maven-plugin.version>7.2.0</openapi-generator-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
