add redis configuration example
Signed-off-by: ZhangJian He <shoothzj@gmail.com>

--- a/spring-boot-reactor-redis-examples/pom.xml
+++ b/spring-boot-reactor-redis-examples/pom.xml
@@ -9,6 +9,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <packaging>pom</packaging>
+    <modules>
+        <module>spring-boot-reactor-redis-example</module>
+        <module>spring-boot-reactor-redis-configuration-example</module>
+    </modules>
     <groupId>com.shoothzj</groupId>
     <artifactId>spring-boot-reactor-redis-examples</artifactId>
 
