--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>spring-boot-webflux-examples</module>
         <module>spring-cloud-examples</module>
         <module>spring-cloud-huawei-examples</module>
+        <module>spring-boot-reactor-file-example</module>
     </modules>
 
     <parent>
