--- a/spring-boot-mysql-examples/spring-boot-mysql-config-code-example/src/main/resources/application.yaml
+++ b/spring-boot-mysql-examples/spring-boot-mysql-config-code-example/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         show_sql: true
