--- a/spring-boot-reactor-mysql-examples/spring-boot-reactor-mysql-config-yaml-example/pom.xml
+++ b/spring-boot-reactor-mysql-examples/spring-boot-reactor-mysql-config-yaml-example/pom.xml
@@ -13,8 +13,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.shoothzj</groupId>
+            <artifactId>spring-boot-reactor-mysql-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.asyncer</groupId>
             <artifactId>r2dbc-mysql</artifactId>
+            <version>1.0.5</version>
         </dependency>
     </dependencies>
 
