--- a/spring-boot-reactor-basic-example/pom.xml
+++ b/spring-boot-reactor-basic-example/pom.xml
@@ -2,18 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>spring-boot-examples</artifactId>
         <groupId>com.github.shoothzj</groupId>
+        <artifactId>spring-boot-examples</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>spring-boot-webflux-exception-example</module>
-        <module>spring-boot-webflux-reactor-netty-example</module>
-    </modules>
 
-    <artifactId>spring-boot-webflux-examples</artifactId>
+    <artifactId>spring-boot-reactor-basic-example</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
